# ribollita

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  README.md  ribollita--0.0.sql  ribollita.c  ribollita.control
.devcontainer/: Dockerfile  devcontainer.json
expected/: copytext.out  create_extension.out
regress/: CMakeLists.txt
regress/expected/: mol_descriptors.out  mol_formats.out  mol_ops.out  reversetext.out
regress/sql/: copytext.sql  mol_descriptors.sql  mol_formats.sql  mol_ops.sql  reversetext.sql
sql/: copytext.sql
src/: CMakeLists.txt  mol.cpp  mol.hpp  mol_descriptors.cpp  mol_formats.cpp  mol_ops.cpp  ribollita--0.0.sql  ribollita.cpp
